# ziptool

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RUN.md  compress.cppm  main.cpp  v1.cpp  vcpkg-configuration.json
.github/workflows/: cmake-single-platform.yml  release-manual.yml  release.yml
indicators/: CMakeLists.txt
subcommand/: zip.cppm
utils/: compress.cppm  utils.cppm
zip/src/: zip.c  zip.h
zip/test/: CMakeLists.txt  test_permissions.c
